WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128102
[Cairo] GraphicsContext::m_pixelSnappingFactor is uninitialized
https://bugs.webkit.org/show_bug.cgi?id=128102
Summary
[Cairo] GraphicsContext::m_pixelSnappingFactor is uninitialized
Hunseop Jeong
Reported
2014-02-03 04:47:42 PST
GraphicsContext::m_pixelSnappingFactor is uninitialized.
Attachments
Patch
(1.64 KB, patch)
2014-02-03 05:08 PST
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.64 KB, patch)
2014-02-03 15:00 PST
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
Patch
(1.61 KB, patch)
2014-02-03 15:23 PST
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Hunseop Jeong
Comment 1
2014-02-03 05:08:13 PST
Created
attachment 222976
[details]
Patch
Ryuan Choi
Comment 2
2014-02-03 07:31:42 PST
Comment on
attachment 222976
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=222976&action=review
> Source/WebCore/ChangeLog:3 > + [EFL/Cairo] GraphicsContext::m_pixelSnappingFactor is uninitialized
It is introduced since
r163265
but it looks ommitted GraphicsContextCairo.cpp Nit, [Cairo] Looks enough because it is used by cairo based ports including GTK, EFL.
Zan Dobersek
Comment 3
2014-02-03 08:38:37 PST
***
Bug 128105
has been marked as a duplicate of this bug. ***
alan
Comment 4
2014-02-03 08:50:14 PST
Looks correct to me. Sorry for the trouble, I didn't see cairo's extra ctor.
Csaba Osztrogonác
Comment 5
2014-02-03 08:52:42 PST
Comment on
attachment 222976
[details]
Patch r=me with comment fix mentioned by Ryuan. Please fix it before landing.
Hunseop Jeong
Comment 6
2014-02-03 15:00:48 PST
Created
attachment 223026
[details]
Patch for landing
Jinwoo Song
Comment 7
2014-02-03 15:05:40 PST
Comment on
attachment 223026
[details]
Patch for landing View in context:
https://bugs.webkit.org/attachment.cgi?id=223026&action=review
> Source/WebCore/ChangeLog:11 > + (WebCore::GraphicsContext::GraphicsContext): Initalized pixelSnappingFactor to 1 and
Typo: s/Initalized/Initialized. 'Formatted to match the WebKit coding style' should be 'fixed the coding style violation'.
Hunseop Jeong
Comment 8
2014-02-03 15:23:37 PST
Created
attachment 223029
[details]
Patch
WebKit Commit Bot
Comment 9
2014-02-03 17:02:15 PST
Comment on
attachment 223029
[details]
Patch Clearing flags on attachment: 223029 Committed
r163348
: <
http://trac.webkit.org/changeset/163348
>
WebKit Commit Bot
Comment 10
2014-02-03 17:02:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug