[Cairo] GraphicsContext::m_pixelSnappingFactor is uninitialized https://bugs.webkit.org/show_bug.cgi?id=128102

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2014-02-03
Reviewed by Csaba Osztrogonác.

Initalize m_pixelSnappingFactor to 1

* platform/graphics/cairo/GraphicsContextCairo.cpp:
(WebCore::GraphicsContext::GraphicsContext): Initialized pixelSnappingFactor to 1 and
fixed the coding style violation.

Canonical link: https://commits.webkit.org/146157@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163348 268f45cc-cd09-0410-ab3c-d52691b4dbfc